# CocoGrid

./: .gitignore  README.md  minimujo_environments.txt  pyproject.toml  requirements.txt  setup.py  testmini.py  tutorial.ipynb
abstractcontrol/: ball.xml  ball_entity.py  box.xml  box_entity.py  color.py  contact_tile_entity.py  door.xml  door_entity.py  goal_arena.py  grabbable_entity.py  grabber.py  jumping_ball_body.png:Zone.Identifier  key.xml  key_entity.py  maze.txt  maze_task_test.py  minigrid_manager.py  minigrid_mujoco.py  minimujo_arena.py  minimujo_task.py  utils.py
cocogrid/: __init__.py  __main__.py  agent.py  cocogrid_suite.py  custom_minigrid.py  dmc_gym.py  engine.py  multitask.py  suite.py  tasks.py
cocogrid/box2d/: box2d_agent.py  box2d_engine.py  gym.py  observation.py
cocogrid/common/: cocogrid_state.py  multitask.py  observation.py  registry.py
cocogrid/common/abstraction/: __init__.py  grid_abstraction.py  room_abstraction.py
cocogrid/entities/: ball_entity.py  box_entity.py  contact_tile_entity.py  door_entity.py  grabbable_entity.py  key_entity.py
cocogrid/entities/assets/: contact_tile.xml
cocogrid/minigrid/: __init__.py  doorkeycrossing.py  hallwaychoice.py  objectdelivery.py  randomcorner.py  umaze.py
cocogrid/mujoco/: __init__.py  cocogrid_arena.py  cocogrid_task.py  dmc_gym.py  grabber.py  maze_arena.py  mujoco_agent.py  mujoco_engine.py  observables.py
cocogrid/mujoco/entities/: ball_entity.py  box_entity.py  contact_tile_entity.py  door_entity.py  grabbable_entity.py  key_entity.py
cocogrid/mujoco/entities/assets/: door.xml
cocogrid/mujoco/walkers/assets/jumping_ball/: jumping_ball_with_head.xml
cocogrid/state/: __init__.py  cocogrid_state.py  goal_wrapper.py  grid_abstraction.py  observation.py  tasks.py
cocogrid/utils/: dm_control.py  testing.py
cocogrid/utils/logging/: __init__.py  heatmap_logger.py  subgoals.py
cocogrid/utils/visualize/: drawing.py  weighted_kde.py
cocogrid/walkers/: square.py
minimujo/: __init__.py  __main__.py  color.py  custom_minigrid.py  dmc_gym.py  grabber.py  maze_arena.py  minimujo_arena.py  minimujo_suite.py  minimujo_task.py  multitask.py  utils.py
minimujo/box2d/: README.md  gym.py  observation.py
minimujo/entities/: __init__.py  ball_entity.py  box_entity.py  contact_tile_entity.py  door_entity.py  grabbable_entity.py  key_entity.py
minimujo/entities/assets/: contact_tile.xml  door.xml
minimujo/minigrid/: grid_wrapper.py  minigrid_goals.py  minigrid_manager.py  minigrid_solver.py  randomobjects.py
minimujo/state/: goal_wrapper.py  grid_abstraction.py  minimujo_state.py  object_abstraction.py  observables.py  observation.py  tasks.py
minimujo/utils/: dm_control.py  gym_wrapper.py  logging.py  minigrid.py  obs_logging.py  obs_visualize.py  testing.py  video.py
minimujo/utils/logging/: __init__.py  heatmap_logger.py  subgoals.py  tensorboard.py
minimujo/utils/visualize/: drawing.py  weighted_kde.py
minimujo/walkers/: ant.py  rolling_ball.py  square.py
minimujo/walkers/assets/: dm_ant.xml  square.xml
