[tool.poetry]
name = "minimujo"
version = "0.1.0"
description = "A continuous extension of Minigrid gridworld environments to MuJoCo"
authors = ["Jeff Jewett <jewettje@oregonstate.edu>"]
license = "MIT"
homepage = "https://gitlab.engr.oregonstate.edu/jewettje/minimujo"
readme = "README.md"
packages = [
    { include = "minimujo" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
dm-control = "*"
gymnasium = "*"
labmaze = "*"
minigrid = "*"

[tool.poetry.scripts]
minimujo = "minimujo.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"